--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cs206
 spring.datasource.username=root
 
 # #change the password to your MySQL password
-spring.datasource.password=Royston21
+spring.datasource.password=
 
 # #to create the table in sql automatically (=create)
 # #need to change to =none after first application run (creation)
